<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text_one"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:hint="@string/firstOperand"
        android:inputType="numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/edit_text_two"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/edit_text_one"
        android:layout_marginStart="15dp"
        android:hint="@string/SecondOperand"
        android:inputType="numberDecimal|numberSigned" />

    <Button
        android:id="@+id/AddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_text_one"
        android:layout_below="@+id/edit_text_two"
        android:onClick="onAdd"
        android:text="@string/Addition" />

    <Button
        android:id="@+id/SubButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_text_two"
        android:layout_marginStart="120dp"
        android:onClick="onSub"
        android:text="@string/Subtraction" />

        <Button
            android:id="@+id/MulButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/SubButton"
            android:layout_below="@+id/AddButton"
            android:onClick="onMul"
            android:text="@string/Multiplication" />

        <Button
            android:id="@+id/DivButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/AddButton"
            android:layout_below="@+id/AddButton"
            android:onClick="onDiv"
            android:text="@string/Division" />

    <TextView
        android:id="@+id/result"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/MulButton"
        android:layout_marginStart="15dp"
        android:text="@string/Result" />


</RelativeLayout>